--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,95 @@
 @import "tailwindcss";
 
-:root {
-    /* Base Colors */
-    --color-primary-100: #ffe0cc;
-    --color-primary-200: #ffc199;
+@layer base {
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		font-family: var(--font-primary);
+		color: var(--color-text-main);
+		transition: .2s;
+	}
+
+	.heading-1 {
+		margin: 1rem 0;
+		padding: 0.3em 0;
+		z-index: 2;
+		font-weight: 600;
+		font-size: var(--font-size-heading-lg);
+		line-height: 1.2em;
+		color: var(--color-text-main);
+	}
+	
+	.heading-2 {
+		padding: 1em 0 0.5em 0;
+		z-index: 2;
+		font-weight: 400;
+		font-size: var(--font-size-heading-md);
+		line-height: 1.2em;
+		color: var(--color-text-main);
+	}
+	
+	.heading-3 {
+		padding: 1em 0 0.5rem 0;
+		font-weight: 400;
+		font-size: var(--font-size-heading-sm);
+		color: var(--color-text-main);
+	}
+	
+	.heading-4 {
+		padding: 1em 0 0.5em 0;
+		font-weight: 600;
+		font-size: var(--font-size-heading-xs);
+		color: var(--color-text-main);
+	}
+	
+	.heading-2--icon {
+		display: flex;
+		align-items: center;
+	}
+	  
+	.heading-2_icon {
+		font-size: 1.2em;
+		line-height: inherit;
+		vertical-align: top;
+		margin-right: .4em;
+	}
+}
+
+@theme {
+
+	/* Responsive breakpoints */
+	--breakpoint-100px: 100px;
+	--breakpoint-200px: 200px;
+	--breakpoint-300px: 300px;
+	--breakpoint-400px: 400px;
+	--breakpoint-500px: 500px;
+	--breakpoint-600px: 600px;
+	--breakpoint-700px: 700px;
+	--breakpoint-800px: 800px;
+	--breakpoint-900px: 900px;
+	--breakpoint-1000px: 1000px;
+
+	/* Base Colors */
+	--color-login-orange: 	#f08029;
+
+	--color-black: #000;  
+	--color-white: #fff;
+	
+	--color-moon: var(--color-grey-800);
+	--color-sun: white;
+
+	/* Primary */
     --color-primary-300: #ffa266;
-    --color-primary-400: #ff8333;
     --color-primary-500: #fd8738;
     --color-primary-600: #d95d0a;
     --color-primary-700: #b34600;
-    --color-primary-800: #8c3700;
-    --color-primary-900: #431e00;
 
-    --color-secondary-100: #ded5fb;
-    --color-secondary-200: #bcaaf7;
-    --color-secondary-300: #9b80f3;
-    --color-secondary-400: #7955ef;
-    --color-secondary-500: #5e49e6;
-    --color-secondary-600: #4936b8;
-    --color-secondary-700: #37298a;
-    --color-secondary-800: #251b5c;
-    --color-secondary-900: #130e2e;
+	/* Secondary */
+	--color-secondary-500: #5e49e6;
 
-    /* Absolute colors */
-    --color-white: #fff;
-    --color-black: #000;
-
-    /* Grey scale */
-    --color-grey-50:  #fefefe;
+	/* Gray Scale */
+	--color-grey-50:  #fefefe;
     --color-grey-100: #f9f9f9;
     --color-grey-200: #f2f2f2;
     --color-grey-300: #e6e6e6;
@@ -40,75 +102,53 @@
     --color-grey-900: #191919;
     --color-grey-950: #0d0d0d;
 
-    /* Blue Scale */
+	/* Blue Scale */
     --color-blue-100: #c8e3f9;
-    --color-blue-200: #90caf9;
     --color-blue-300: #64b5f6;
-    --color-blue-400: #42a5f5;
-    --color-blue-500: #2196f3;
     --color-blue-600: #1e88e5;
     --color-blue-700: #1976d2;
-    --color-blue-800: #0c4870;
-    --color-blue-900: #013444;
     --color-blue-900: #05313d;
 
-    /* Red Scale */
+	/* Red Scale */
     --color-red-100: #ffcdd2;
     --color-red-200: #ef9a9a;
-    --color-red-300: #e57373;
-    --color-red-400: #ef5350;
     --color-red-500: #f44336;
-    --color-red-600: #e53935;
     --color-red-700: #d32f2f;
     --color-red-800: #c62828;
     --color-red-900: #6f1212;
 
-    /* Green Scale */
+	/* Green Scale */
     --color-green-100: #c8e6c9;
-    --color-green-200: #a5d6a7;
-    --color-green-300: #81c784;
     --color-green-400: #66bb6a;
     --color-green-500: #4caf50;
-    --color-green-600: #43a047;
     --color-green-700: #388e3c;
-    --color-green-800: #2e7d32;
     --color-green-900: #1b5e20;
 
-    /* Yellow Scale */
+	/* Yellow Scale */
     --color-yellow-100: #fdf3d4;
-    --color-yellow-200: #fcf0ca;
-    --color-yellow-300: #fbe6aa;
     --color-yellow-400: #f7d46a;
     --color-yellow-500: #fcc727;
-    --color-yellow-600: #e9b824;
-    --color-yellow-700: #b79120;
-    --color-yellow-800: #927419;
     --color-yellow-900: #3c300e;
-
-    /* Theme toggle button */
-    --color-moon: var(--color-grey-800);
-    --color-sun: white;
 }
-
 
 :root {
 	color-scheme: dark;
 
   	/* Semantic Colors */
 	--color-primary: var(--color-primary-500);
-	--color-primary-light: var(--color-primary-300);
-	--color-primary-dark: var(--color-primary-700);
+	/* --color-primary-light: var(--color-primary-300); */
+	/* --color-primary-dark: var(--color-primary-700); */
 	
-	--color-secondary: var(--color-secondary-500);
-	--color-secondary-light: var(--color-secondary-300);
-	--color-secondary-dark: var(--color-secondary-700);
+	/* --color-secondary: var(--color-secondary-500); */
+	/* --color-secondary-light: var(--color-secondary-300); */
+	/* --color-secondary-dark: var(--color-secondary-700); */
 
 	/* Background Colors */
 	--color-bg-body: var(--color-grey-900);
 	--color-bg-surface: var(--color-grey-850);
 	--color-bg-surface-raised: var(--color-grey-800);
 	--color-bg-surface-sunken: var(--color-grey-950);
-	--color-bg-overlay: rgba(0, 0, 0, 0.4);
+	/* --color-bg-overlay: rgba(0, 0, 0, 0.4); */
 
 	/* Top Bar */
 	--color-bg-topbar: rgba(30, 30, 30, 0.6);
@@ -130,8 +170,8 @@
 
 	/* Border Colors */
 	--color-border-default: var(--color-grey-800);
-	--color-border-light: var(--color-grey-700);
-	--color-border-strong: var(--color-grey-900);
+	/* --color-border-light: var(--color-grey-700); */
+	/* --color-border-strong: var(--color-grey-900); */
 
 	/* Buttons */
 	--color-btn-primary-bg: var(--color-primary-600);
@@ -140,15 +180,15 @@
 	
 	--color-btn-secondary-bg: var(--color-grey-800);
 	--color-btn-secondary-bg-active: var(--color-grey-850);
-	--color-btn-secondary-text: var(--color-white);
+	/* --color-btn-secondary-text: var(--color-white); */
 	--color-btn-primary-outlined: var(--color-primary-500);
 	--color-btn-secondary-outlined: var(--color-grey-800);
 	
 	--color-btn-danger-bg: var(--color-red-500);
 	--color-btn-danger-bg-active: var(--color-red-700);
 	--color-btn-danger-text: var(--color-white);
-	--color-btn-disabled-bg: var(--color-grey-400);
-	--color-btn-disabled-text: var(--color-grey-600);
+	/* --color-btn-disabled-bg: var(--color-grey-400); */
+	/* --color-btn-disabled-text: var(--color-grey-600); */
 
 	/* Form Element Colors */
 	--color-checkbox-outline: var(--color-grey-600);
@@ -165,9 +205,9 @@
 	--color-alert-info-text: var(--color-blue-100);
 	--color-alert-info-icon: var(--color-blue-300);
 
-	--color-alert-success-bg: var(--color-green-900);
-	--color-alert-success-text: var(--color-green-100);
-	--color-alert-success-icon: var(--color-green-700);
+	/* --color-alert-success-bg: var(--color-green-900); */
+	/* --color-alert-success-text: var(--color-green-100); */
+	/* --color-alert-success-icon: var(--color-green-700); */
 
 	--color-alert-warning-bg: var(--color-yellow-900);
 	--color-alert-warning-text: var(--color-yellow-100);
@@ -209,19 +249,19 @@
 
 	/* Semantic Colors */
 	--color-primary: var(--color-primary-500);
-	--color-primary-light: var(--color-primary-300);
-	--color-primary-dark: var(--color-primary-700);
+	/* --color-primary-light: var(--color-primary-300); */
+	/* --color-primary-dark: var(--color-primary-700); */
 
-	--color-secondary: var(--color-secondary-500);
-	--color-secondary-light: var(--color-secondary-300);
-	--color-secondary-dark: var(--color-secondary-700);
+	/* --color-secondary: var(--color-secondary-500); */
+	/* --color-secondary-light: var(--color-secondary-300); */
+	/* --color-secondary-dark: var(--color-secondary-700); */
 
 	/* Background Colors */
 	--color-bg-body: var(--color-grey-300);
 	--color-bg-surface: var(--color-grey-200);
 	--color-bg-surface-raised: white;
 	--color-bg-surface-sunken: var(--color-grey-200);
-	--color-bg-overlay: rgba(255, 255, 255, 0.8);
+	/* --color-bg-overlay: rgba(255, 255, 255, 0.8); */
 
 	/* Top Bar */
 	--color-bg-topbar: rgba(240, 240, 240, 0.85);
@@ -243,8 +283,8 @@
 	
 	/* Border Colors */
 	--color-border-default: var(--color-grey-500);
-	--color-border-light: var(--color-grey-300);
-	--color-border-strong: var(--color-grey-600);
+	/* --color-border-light: var(--color-grey-300); */
+	/* --color-border-strong: var(--color-grey-600); */
 
 	/* Button Colors */
 	--color-btn-primary-bg: var(--color-primary-600);
@@ -253,15 +293,15 @@
 	
 	--color-btn-secondary-bg: var(--color-grey-400);
 	--color-btn-secondary-bg-active: var(--color-grey-300);
-	--color-btn-secondary-text: var(--color-black);
+	/* --color-btn-secondary-text: var(--color-black); */
 	--color-btn-primary-outlined: var(--color-primary-700);
 	--color-btn-secondary-outlined: var(--color-grey-400);
 	
 	--color-btn-danger-bg: var(--color-red-500);
 	--color-btn-danger-bg-active: var(--color-red-700);
 	--color-btn-danger-text: var(--color-white);
-	--color-btn-disabled-bg: var(--color-grey-400);
-	--color-btn-disabled-text: var(--color-grey-600);
+	/* --color-btn-disabled-bg: var(--color-grey-400); */
+	/* --color-btn-disabled-text: var(--color-grey-600); */
 
 	/* Form Element Colors */
 	--color-checkbox-outline: var(--color-grey-600);
@@ -278,9 +318,9 @@
 	--color-alert-info-text: var(--color-blue-900);
 	--color-alert-info-icon: var(--color-blue-700);
 
-	--color-alert-success-bg: var(--color-green-50);
-	--color-alert-success-text: var(--color-green-900);
-	--color-alert-success-icon: var(--color-green-500);
+	/* --color-alert-success-bg: var(--color-green-50); */
+	/* --color-alert-success-text: var(--color-green-900); */
+	/* --color-alert-success-icon: var(--color-green-500); */
 
 	--color-alert-warning-bg: var(--color-yellow-400);
 	--color-alert-warning-text: var(--color-black);
