--- a/public/assets/fonts/logfont/style.css
+++ b/public/assets/fonts/logfont/style.css
@@ -46,13 +46,13 @@
 .logfont-styret-filled:before {
   content: "\e952";
 }
-.logfont-eventkom-corners:before {
+.logfont-evntkom-corners:before {
   content: "\e90f";
 }
-.logfont-eventkom:before {
+.logfont-evntkom:before {
   content: "\e907";
 }
-.logfont-eventkom-filled:before {
+.logfont-evntkom-filled:before {
   content: "\e954";
 }
 .logfont-bedkom-corners:before {
