--- a/src/components/svg/committeelogos/EvntkomLogoAnimation.css
+++ b/src/components/svg/committeelogos/EvntkomLogoAnimation.css
@@ -1,25 +1,25 @@
 @media only screen and (min-width: 800px) {
-    .tabs_nav-title--active .eventkom-logo_curve1 {
+    .tabs_nav-title--active .evntkom-logo_curve1 {
         animation: spin1 0.3s ease-in, spin1 0.2s linear 0.3s, spin1 0.5s ease-out 0.5s;
     }
 
-    .tabs_nav-title--active .eventkom-logo_curve2 {
+    .tabs_nav-title--active .evntkom-logo_curve2 {
         animation: spin2 0.3s ease-in, spin2 0.2s linear 0.3s, spin2 0.5s ease-out 0.5s;
     }
 
-    .tabs_nav-title--active .eventkom-logo_curve3 {
+    .tabs_nav-title--active .evntkom-logo_curve3 {
         animation: spin3 0.3s ease-in, spin3 0.2s linear 0.3s, spin3 0.5s ease-out 0.5s;
     }
 
-    .tabs_nav-title--active .eventkom-logo_curve4 {
+    .tabs_nav-title--active .evntkom-logo_curve4 {
         animation: spin4 0.3s ease-in, spin4 0.2s linear 0.3s, spin4 0.5s ease-out 0.5s;
     }
 
-    .tabs_nav-title--active .eventkom-logo_star1 {
+    .tabs_nav-title--active .evntkom-logo_star1 {
         animation: blink1 1 0.6s ease-out 0.1s;
     }
 
-    .tabs_nav-title--active .eventkom-logo_star2 {
+    .tabs_nav-title--active .evntkom-logo_star2 {
         animation: blink2 1 0.6s ease-out 0.3s;
     }
 
