--- a/src/app/career/page.css
+++ b/src/app/career/page.css
@@ -1,246 +1,41 @@
-/* grid layout */
+@media only screen and (min-width: 1000px) {
 
-.jobad-page {
-    display: grid;
-    align-items: start;
-    grid-template-columns: 1fr;
-}
-
-.jobad-page--banner {
-    grid-template-areas: 
-        'ban'               /* banner */
-        'det'               /* details */
-        'des'               /* description */
-}
-
-.jobad-page--noBanner {
-    grid-template-areas: 
-        'det'               /* details */
-        'des'               /* description */
-}
-
-.jobad-details {
-    grid-area: det;
-}
-
-.jobad-banner {
-    grid-area: ban;
-}
-
-.jobad-description {
-    grid-area: des;
-}
-
-
-/* jobad details */
-
-.jobad-details {
-    width: 100%;
-    padding: 2rem 1rem;
-    background-color: var(--color-bg-surface);
+  .jobads_filter-container {
+    padding: 0;
+    margin: 0;
     position: relative;
-}
-
-.jobad-details_image {
     display: block;
-    width: 7.5rem;
-    border-radius: .2rem;
-    aspect-ratio: 3 / 2;
-    object-fit: contain;
+    background: none;
+    box-shadow: none;
+  }
+
+  .jobads_filter-container:after {
+    content: '';
+    width: 2.6rem;
+    height: 2.6rem;
+    position: absolute;
+    border-width: .7rem;
+    border-color: var(--color-border-default);
+    border-style: none solid solid none;
+    bottom: 0;
+    right: 0;
+    transition: .1s;
+  }
+
+  .jobads_filter-container:before {
+    content: '';
+    width: 2.6rem;
+    height: 2.6rem;
+    position: absolute;
+    border-width: .7rem;
+    border-color: var(--color-border-default);
+    border-style: solid solid none none;
+    top: 0;
+    right: 0;
+    transition: .1s;
+  }
+
+  
 }
 
-.jobad-details_company-name {
-    font-size: 1.5rem;
-    margin: auto 0;
-    line-height: 1.4em;
-
-    /* cleaner word-breaking */
-    word-break: break-word;
-	white-space: pre-line;
-	overflow-wrap: break-word;
-	-ms-word-break: break-word;
-	word-break: break-word;
-	-ms-hyphens: auto;
-	-moz-hyphens: auto;
-	-webkit-hyphens: auto;
-	hyphens: auto;
-}
-
-.jobad-details_icon--warning {
-    color: var(--color-text-primary);
-    margin-left: .5rem;
-    padding-right: 0 !important; /* not great solution, but i dont care */
-    width: fit-content !important;
-}
-
-/* lable icon */
-.jobad-details_icon {
-    line-height: 1.5rem;
-    width: 2rem;
-    text-align: center;
-    padding-right: .5rem;
-}
-
-.jobad-details_icon--lable-color {
-    color: var(--color-text-discreet);
-}
-
-.jobad-details_info {
-    /* cleaner word-breaking */
-    word-break: break-word;
-	white-space: pre-line;
-	overflow-wrap: break-word;
-	-ms-word-break: break-word;
-	word-break: break-word;
-	-ms-hyphens: auto;
-	-moz-hyphens: auto;
-	-webkit-hyphens: auto;
-	hyphens: auto;
-}
-
-/* jobad banner */
-.jobad-banner {
-    background-color: rgba(100,100,100,.3);
-}
-
-.jobad-banner_image {
-    display: block;
-    aspect-ratio: 10 / 4;
-    object-fit: cover;
-    width: 100%;
-}
-
-
-/* description */
-
-.jobad-description {
-    padding: 1rem;
-    position: relative;
-}
-
-
-@media only screen and (min-width: 450px) {
-    .jobad-details {
-        padding: 2rem;
-    }
-
-    .jobad-details_image {
-        width: 10rem;
-    }
-
-    .jobad-details_apply-btn {
-        width: fit-content;
-        min-width: 10rem;
-    }
-
-    .jobad-description {
-        padding: 2rem;
-    }
-}
-
-@media only screen and (min-width: 800px) {
-
-    .jobad-page {
-        grid-template-columns: 20rem auto;
-        column-gap: 5%;
-        padding: 3rem 2rem 0 2rem;
-        max-width: calc(var(--w-page) + 4rem);
-        margin: auto;
-    }
-
-    .jobad-page--banner {
-        grid-template-areas: 
-            'det ban'
-            'det des';
-    }
-    
-    .jobad-page--noBanner {
-        grid-template-areas: 
-            'det des'
-            'det .';
-    }
-    
-
-    .jobad-details {
-        padding: 0;
-        background: none;
-    }
-    
-    .jobad-details:before {
-        content: '';
-        width: 2.6rem;
-        height: 2.6rem;
-        position: absolute;
-        border-width: .7rem;
-        border-color: var(--color-border-default);
-        border-style: solid solid none none;
-        top: 0;
-        right: 0;
-        transition: .1s;
-    }
-
-    .jobad-details:after {
-        content: '';
-        width: 2.6rem;
-        height: 2.6rem;
-        position: absolute;
-        border-width: .7rem;
-        border-color: var(--color-border-default);
-        border-style: none none solid solid;
-        bottom: 0;
-        left: 0;
-        transition: .1s;
-    }
-
-    .jobad-details_company-name {
-        margin-top: 1rem;
-    }
-
-    .jobad-details_image {
-        width: 12rem;
-    }
-
-    .jobad-details_apply-btn {
-        min-width: 12rem;
-        float: right;
-        margin-top: 0;
-    }
-
-    .jobad-banner {
-        margin-bottom: 2rem;
-    }
-
-    .jobad-banner img {
-        border-radius: var(--border-radius);
-    }
-
-    .jobad-description {
-        padding: 0 2.5rem 1rem 0;
-    }
-
-    .jobad-description:after {
-        content: '';
-        width: 2.6rem;
-        height: 2.6rem;
-        position: absolute;
-        border-width: .7rem;
-        border-color: var(--color-bg-surface);
-        border-style: solid solid none none;
-        top: 0;
-        right: 0;
-        transition: .1s;
-    }
-
-    .jobad-description:before {
-        content: '';
-        width: 2.6rem;
-        height: 2.6rem;
-        position: absolute;
-        border-width: .7rem;
-        border-color: var(--color-bg-surface);
-        border-style: none solid solid none;
-        bottom: 0;
-        right: 0;
-        transition: .1s;
-    }
-}
+  
