--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -132,7 +132,7 @@
 		column-gap: 1rem;
 		padding: .75rem;
 		max-width: 100%;
-		grid-template-columns: min-content auto;
+		grid-template-columns: auto 1fr;
 		grid-template-areas: 
 			'pic info';
 	}
