--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -575,6 +575,10 @@ abbr {
 	--color-checktag-bg: var(--color-grey-800);
 	--color-checktag-text: var(--color-white);
 
+	/* Wrapped Colors */
+	--color-progressbar: var(--color-white);
+	--color-progressbar-unfilled: var(--color-gray-500);
+
 	/* Links */
 	--color-link-primary: var(--color-primary-500);
 	--color-link-secondary: var(--color-secondary-500);
@@ -688,6 +692,10 @@ abbr {
 	--color-checkbox-bg-hover: var(--color-grey-300);
 	--color-checktag-bg: var(--color-grey-400);
 	--color-checktag-text: var(--color-black);
+
+	/* Wrapped Colors */
+	--color-progressbar: var(--color-gray-500);
+	--color-progressbar-unfilled: var(--color-gray-800);
 
 	/* Links */
 	--color-link-primary: var(--color-primary-700);
