--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -744,3 +744,49 @@ abbr {
 	--container-shadow: 0 .1rem .5rem .1rem rgba(200,200,200, 0.3);
 	--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(0,0,0,0.1);
 }
+
+/* ----- Music ----- */
+
+/* PlayIcon */
+@keyframes bounce1 {
+  0%, 50%, 100% { height: 1.2rem; }
+  25%, 75% { height: 0.6rem; }
+}
+
+@keyframes bounce2 {
+  0%, 10%, 100% { height: 1.2rem; }
+  20%, 60% { height: 0.35rem; }
+  40%, 80% { height: 0.75rem; }
+}
+
+@keyframes bounce3 {
+  0%, 33%, 66%, 100% { height: 0.33rem; }
+  11%, 77% { height: 0.66rem; }
+  44% { height: 1.2rem; }
+  22%, 55%, 88% { height: 1rem; }
+}
+
+.animate-bar1 {
+  animation: bounce1 1.5s infinite ease-in-out;
+}
+.animate-bar2 {
+  animation: bounce2 1.6s infinite ease-in-out;
+}
+.animate-bar3 {
+  animation: bounce3 1.7s infinite ease-in-out;
+}
+
+/* Marquee */
+@keyframes marquee {
+	0% { transform: translateX(0); }
+	20% { transform: translateX(0); }
+	70% { transform: translateX(calc(-1 * var(--scroll-distance))); }
+	90% { transform: translateX(calc(-1 * var(--scroll-distance))); }
+	100% { transform: translateX(0); }
+}
+
+.animate-marquee {
+	display: inline-block;
+	vertical-align: top;
+	animation: marquee 12s linear infinite;
+}
