--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,40 +3,41 @@
 @config '../../tailwind.config.ts';
 
 @utility noscroll {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  &::-webkit-scrollbar {
-      display: none;
-  }
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 :root {
-    /* font family */
-    --font-primary: 'Poppins', sans-serif;
-    --font-secondary: 'Lora', serif;
+	/* font family */
+	--font-primary: 'Poppins', sans-serif;
+	--font-secondary: 'Lora', serif;
 
-    /* distances */
-    --h-topbar: 4rem;
-    --w-page: 73rem;
+	/* distances */
+	--h-topbar: 4rem;
+	--w-page: 73rem;
 
-    /* border-radius */
-    --border-radius-small: .2rem;
-    --border-radius: .3rem;
-    --border-radius-large: .4rem;
+	/* border-radius */
+	--border-radius-small: .2rem;
+	--border-radius: .3rem;
+	--border-radius-large: .4rem;
 
-    /* headings */
-    --font-size-heading-xxl: 3.5rem;
-    --font-size-heading-xl: 2.5rem;
-    --font-size-heading-lg: 2.1rem;
-    --font-size-heading-md: 1.8rem;
-    --font-size-heading-sm: 1.4rem;
-    --font-size-heading-xs: 1.2rem;
+	/* headings */
+	--font-size-heading-xxl: 3.5rem;
+	--font-size-heading-xl: 2.5rem;
+	--font-size-heading-lg: 2.1rem;
+	--font-size-heading-md: 1.8rem;
+	--font-size-heading-sm: 1.4rem;
+	--font-size-heading-xs: 1.2rem;
 }
 
 @media only screen and (min-width: 800px) {
-    :root {
-        --h-topbar: 5rem;
-    }
+	:root {
+		--h-topbar: 5rem;
+	}
 }
 
 /* ----------------------------------- */
@@ -44,16 +45,16 @@
 /* ----------------------------------- */
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-    .main-header {
-        background-color: var(--color-bg-topbar);
-        backdrop-filter: blur(20px);
-    }
+	.main-header {
+		background-color: var(--color-bg-topbar);
+		backdrop-filter: blur(20px);
+	}
 }
 
 @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-    .main-header {
-        background-color: var(--color-bg-topbar-fallback);
-    }
+	.main-header {
+		background-color: var(--color-bg-topbar-fallback);
+	}
 }
 
 
@@ -69,33 +70,34 @@
 */
 
 .page-container {
-    display: grid;
-    grid-template-columns: 1fr 1rem minmax(0, var(--w-page)) 1rem 1fr;
+	display: grid;
+	grid-template-columns: 1fr 1rem minmax(0, var(--w-page)) 1rem 1fr;
 }
 
 .page-section--normal {
-    grid-column: 3;
+	grid-column: 3;
 }
 
 .page-section--full-width {
-    grid-column: 1 / -1; /* Span across all columns */
+	grid-column: 1 / -1;
+	/* Span across all columns */
 }
 
 .page-section--without-gaps {
-    grid-column: 2 / 5;
+	grid-column: 2 / 5;
 }
 
 .page-section--alert {
-    margin: 8rem auto;
-    max-width: 40rem;
+	margin: 8rem auto;
+	max-width: 40rem;
 }
 
 @media only screen and (min-width: 800px) {
-    .page-container {
-        display: grid;
-        grid-template-columns: 1fr 2rem minmax(0, var(--w-page)) 2rem 1fr;
-        padding-top: 2rem;
-    }
+	.page-container {
+		display: grid;
+		grid-template-columns: 1fr 2rem minmax(0, var(--w-page)) 2rem 1fr;
+		padding-top: 2rem;
+	}
 }
 
 
@@ -107,57 +109,57 @@
 
 
 @media only screen and (min-width: 400px) {
-    .heading-1 {
-        font-size: 2.5rem;
-    }
+	.heading-1 {
+		font-size: 2.5rem;
+	}
 
-    .heading-2 {
-        font-size: 2.1rem;
-    }  
+	.heading-2 {
+		font-size: 2.1rem;
+	}
 
-    .heading-3 {
-        font-size: 1.8rem;
-    }
+	.heading-3 {
+		font-size: 1.8rem;
+	}
 
-    .heading-4 {
-        font-size: 1.3rem;
-    }
+	.heading-4 {
+		font-size: 1.3rem;
+	}
 }
 
 /* For tablets */
 @media only screen and (min-width: 800px) {
-    .heading-1 {
-        font-size: 3.5rem;
-        padding-left: 1.5rem;
-    }
+	.heading-1 {
+		font-size: 3.5rem;
+		padding-left: 1.5rem;
+	}
 
-    /* Decoration corner */
-    .heading-1:before {
-        z-index: -1;
-        content: '';
-        position: absolute;
-        width: 2.6rem;
-        height: 2.6rem;
-        border-width: .7rem;
-        border-color: var(--color-border-default);
-        border-style: solid none none solid;
-        margin-left: -1.5rem;
-        margin-top: -.8rem;
-        z-index: 2;
-        transition: .1s;
-    }
-    
-    .heading-2 {
-        font-size: 2.5rem;
-    }
+	/* Decoration corner */
+	.heading-1:before {
+		z-index: -1;
+		content: '';
+		position: absolute;
+		width: 2.6rem;
+		height: 2.6rem;
+		border-width: .7rem;
+		border-color: var(--color-border-default);
+		border-style: solid none none solid;
+		margin-left: -1.5rem;
+		margin-top: -.8rem;
+		z-index: 2;
+		transition: .1s;
+	}
 
-    .heading-3 {
-        font-size: 2rem;
-    }
-    
-    .heading-4 {
-        font-size: 1.3rem;
-    }
+	.heading-2 {
+		font-size: 2.5rem;
+	}
+
+	.heading-3 {
+		font-size: 2rem;
+	}
+
+	.heading-4 {
+		font-size: 1.3rem;
+	}
 }
 
 
@@ -169,46 +171,48 @@
 /* see button component for button links */
 
 a {
-    text-decoration: none;
-    cursor: pointer;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 .link {
-    font-weight: 500;
+	font-weight: 500;
 }
 
-.link--primary, .link--primary i {
-    color: var(--color-link-primary);
+.link--primary,
+.link--primary i {
+	color: var(--color-link-primary);
 }
 
-.link--secondary, .link--secondary i {
-    color: var(--color-link-secondary);
+.link--secondary,
+.link--secondary i {
+	color: var(--color-link-secondary);
 }
 
 .link--underscore-hover:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .link--corner-hover {
-    position: relative;
+	position: relative;
 }
 
 .link--corner-hover:after {
-    content: ' ';
-    position: absolute;
-    width: .8em;
-    height: .8em;
-    bottom: .4em;
-    right: .4em;
-    border-right: .2em solid transparent;
-    border-bottom: .2em solid transparent;
-    transition: .2s;
+	content: ' ';
+	position: absolute;
+	width: .8em;
+	height: .8em;
+	bottom: .4em;
+	right: .4em;
+	border-right: .2em solid transparent;
+	border-bottom: .2em solid transparent;
+	transition: .2s;
 }
 
 .link--corner-hover:hover::after {
-    border-color: var(--color-link-primary);
-    right: 0;
-    bottom: 0;
+	border-color: var(--color-link-primary);
+	right: 0;
+	bottom: 0;
 }
 
 
@@ -218,48 +222,49 @@ a {
 /* ----------------------------------- */
 
 .p--regular {
-    padding-bottom: 1.2rem;
-    line-height: 1.8em;
-    color: var(--color-text-regular);
-    max-width: 50rem;
+	padding-bottom: 1.2rem;
+	line-height: 1.8em;
+	color: var(--color-text-regular);
+	max-width: 50rem;
 }
-  
+
 .p--regular i {
-    color: var(--color-text-regular);
+	color: var(--color-text-regular);
 }
 
 .p--highlighted {
-    padding: .5rem 0;
-    margin-bottom: 1.2rem;
-    margin-top: 1.2rem;
-    line-height: 1.8rem;
-    font-family: var(--font-secondary);
-    font-weight: 600;
-    font-size: 1.2rem;
-    color: var(--color-text-main);
-    padding-left: 1rem;
-    border-left: .3rem solid var(--color-primary);
-    max-width: 50rem;
+	padding: .5rem 0;
+	margin-bottom: 1.2rem;
+	margin-top: 1.2rem;
+	line-height: 1.8rem;
+	font-family: var(--font-secondary);
+	font-weight: 600;
+	font-size: 1.2rem;
+	color: var(--color-text-main);
+	padding-left: 1rem;
+	border-left: .3rem solid var(--color-primary);
+	max-width: 50rem;
 }
 
 .p--highlighted i {
-    color: var(--color-text-main);
+	color: var(--color-text-main);
 }
 
 @media only screen and (min-width: 800px) {
-    /* Split wide paragraphs into two columns */
-    .p--columns {
-        column-count: 2;
-        column-gap: 4rem;
-        column-rule: .2rem solid var(--color-border-default);
-        margin: 1rem 0;
-    }
 
-    .p--columns .p--highlighted {
-        margin-top: 0;
-    }
+	/* Split wide paragraphs into two columns */
+	.p--columns {
+		column-count: 2;
+		column-gap: 4rem;
+		column-rule: .2rem solid var(--color-border-default);
+		margin: 1rem 0;
+	}
+
+	.p--columns .p--highlighted {
+		margin-top: 0;
+	}
 }
-  
+
 /* could not get this container query working, dont know why...
 .p--columns {
     display: block;
@@ -287,20 +292,20 @@ a {
 /* ----------------------------------- */
 
 .list {
-    list-style: none;
+	list-style: none;
 }
 
 .list li {
-    color: var(--color-text-regular);
+	color: var(--color-text-regular);
 }
 
 .list li:before {
-    content: '\2022';
-    color: var(--color-primary);
-    font-weight: bold;
-    display: inline-block;
-    width: 1em;
-    margin-left: .5em;
+	content: '\2022';
+	color: var(--color-primary);
+	font-weight: bold;
+	display: inline-block;
+	width: 1em;
+	margin-left: .5em;
 }
 
 
@@ -310,15 +315,15 @@ a {
 /* --------------------------------------- */
 
 .material-symbols-sharp {
-    vertical-align: middle;
+	vertical-align: middle;
 }
 
 abbr {
-    text-decoration-color: var(--color-text-main);
+	text-decoration-color: var(--color-text-main);
 }
 
 .word-break {
-    word-break: break-word;
+	word-break: break-word;
 	white-space: pre-line;
 	overflow-wrap: break-word;
 	-ms-word-break: break-word;
@@ -333,44 +338,46 @@ abbr {
 /* --------- Skeleton loading --------- */
 
 .skeleton {
-    background-color: rgba(100,100,100,.3);
-    border-radius: var(--border-radius);
-    position: relative;
-    overflow: hidden;
+	background-color: rgba(100, 100, 100, .3);
+	border-radius: var(--border-radius);
+	position: relative;
+	overflow: hidden;
 }
 
 .skeleton::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: -150px;
-    height: 100%;
-    width: 150px;
-    background: linear-gradient(90deg, rgba(90,90,90,0) 0%, rgba(90,90,90,0.2) 50%, rgba(90,90,90,0) 100%);
-    animation: skeleton-loading 1.5s infinite;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: -150px;
+	height: 100%;
+	width: 150px;
+	background: linear-gradient(90deg, rgba(90, 90, 90, 0) 0%, rgba(90, 90, 90, 0.2) 50%, rgba(90, 90, 90, 0) 100%);
+	animation: skeleton-loading 1.5s infinite;
 }
 
 @keyframes skeleton-loading {
-    from {
-        left: -150px;
-    }
-    to {
-        left: 100%;
-    }
+	from {
+		left: -150px;
+	}
+
+	to {
+		left: 100%;
+	}
 }
-  
+
 
 /* --------- Text selection ---------- */
 
-::-moz-selection { /* Code for Firefox */
-    color: white !important;
-    background: var(--color-primary) !important;
+::-moz-selection {
+	/* Code for Firefox */
+	color: white !important;
+	background: var(--color-primary) !important;
 }
 
 ::selection {
-    color: white !important;
-    background: var(--color-primary) !important;
+	color: white !important;
+	background: var(--color-primary) !important;
 }
 
 
@@ -393,7 +400,7 @@ abbr {
 		line-height: 1.2em;
 		color: var(--color-text-main);
 	}
-	
+
 	.heading-2 {
 		padding: 1em 0 0.5em 0;
 		z-index: 2;
@@ -402,26 +409,26 @@ abbr {
 		line-height: 1.2em;
 		color: var(--color-text-main);
 	}
-	
+
 	.heading-3 {
 		padding: 1em 0 0.5rem 0;
 		font-weight: 400;
 		font-size: var(--font-size-heading-sm);
 		color: var(--color-text-main);
 	}
-	
+
 	.heading-4 {
 		padding: 1em 0 0.5em 0;
 		font-weight: 600;
 		font-size: var(--font-size-heading-xs);
 		color: var(--color-text-main);
 	}
-	
+
 	.heading-2--icon {
 		display: flex;
 		align-items: center;
 	}
-	  
+
 	.heading-2_icon {
 		font-size: 1.2em;
 		line-height: inherit;
@@ -449,74 +456,74 @@ abbr {
 	--breakpoint-1200px: 1200px;
 
 	/* Base Colors */
-	--color-login-orange: 	#f08029;
+	--color-login-orange: #f08029;
 
-	--color-black: #000;  
+	--color-black: #000;
 	--color-white: #fff;
-	
+
 	--color-moon: var(--color-grey-800);
 	--color-sun: white;
 
 	/* Primary */
-    --color-primary-300: #ffa266;
-    --color-primary-500: #fd8738;
-    --color-primary-600: #d95d0a;
-    --color-primary-700: #b34600;
+	--color-primary-300: #ffa266;
+	--color-primary-500: #fd8738;
+	--color-primary-600: #d95d0a;
+	--color-primary-700: #b34600;
 
 	/* Secondary */
 	--color-secondary-500: #5e49e6;
 
 	/* Gray Scale */
-	--color-grey-50:  #fefefe;
-    --color-grey-100: #f9f9f9;
-    --color-grey-200: #f2f2f2;
-    --color-grey-300: #e6e6e6;
-    --color-grey-400: #cccccc;
-    --color-grey-500: #b3b3b3;
-    --color-grey-600: #8c8c8c;
-    --color-grey-700: #707070;
-    --color-grey-800: #424242;
-    --color-grey-850: #252525;
-    --color-grey-900: #191919;
-    --color-grey-950: #0d0d0d;
+	--color-grey-50: #fefefe;
+	--color-grey-100: #f9f9f9;
+	--color-grey-200: #f2f2f2;
+	--color-grey-300: #e6e6e6;
+	--color-grey-400: #cccccc;
+	--color-grey-500: #b3b3b3;
+	--color-grey-600: #8c8c8c;
+	--color-grey-700: #707070;
+	--color-grey-800: #424242;
+	--color-grey-850: #252525;
+	--color-grey-900: #191919;
+	--color-grey-950: #0d0d0d;
 
 	/* Blue Scale */
-    --color-blue-100: #c8e3f9;
-    --color-blue-300: #64b5f6;
-    --color-blue-600: #1e88e5;
-    --color-blue-700: #1976d2;
-    --color-blue-900: #05313d;
+	--color-blue-100: #c8e3f9;
+	--color-blue-300: #64b5f6;
+	--color-blue-600: #1e88e5;
+	--color-blue-700: #1976d2;
+	--color-blue-900: #05313d;
 
 	/* Red Scale */
-    --color-red-100: #ffcdd2;
-    --color-red-200: #ef9a9a;
-    --color-red-500: #f44336;
-    --color-red-700: #d32f2f;
-    --color-red-800: #c62828;
-    --color-red-900: #6f1212;
+	--color-red-100: #ffcdd2;
+	--color-red-200: #ef9a9a;
+	--color-red-500: #f44336;
+	--color-red-700: #d32f2f;
+	--color-red-800: #c62828;
+	--color-red-900: #6f1212;
 
 	/* Green Scale */
-    --color-green-100: #c8e6c9;
-    --color-green-400: #66bb6a;
-    --color-green-500: #4caf50;
-    --color-green-700: #388e3c;
-    --color-green-900: #1b5e20;
+	--color-green-100: #c8e6c9;
+	--color-green-400: #66bb6a;
+	--color-green-500: #4caf50;
+	--color-green-700: #388e3c;
+	--color-green-900: #1b5e20;
 
 	/* Yellow Scale */
-    --color-yellow-100: #fdf3d4;
-    --color-yellow-400: #f7d46a;
-    --color-yellow-500: #fcc727;
-    --color-yellow-900: #3c300e;
+	--color-yellow-100: #fdf3d4;
+	--color-yellow-400: #f7d46a;
+	--color-yellow-500: #fcc727;
+	--color-yellow-900: #3c300e;
 }
 
 :root {
 	color-scheme: dark;
 
-  	/* Semantic Colors */
+	/* Semantic Colors */
 	--color-primary: var(--color-primary-500);
 	/* --color-primary-light: var(--color-primary-300); */
 	/* --color-primary-dark: var(--color-primary-700); */
-	
+
 	/* --color-secondary: var(--color-secondary-500); */
 	/* --color-secondary-light: var(--color-secondary-300); */
 	/* --color-secondary-dark: var(--color-secondary-700); */
@@ -533,7 +540,7 @@ abbr {
 	/* fallback if blur is not supported */
 	--color-bg-topbar-fallback: rgba(34, 33, 32, 0.99);
 	--color-bg-topbar-open: rgba(20, 20, 20, .8);
-	
+
 	/* Footer */
 	--color-bg-footer: var(--color-grey-950);
 	--color-text-footer: var(--color-grey-200);
@@ -556,13 +563,13 @@ abbr {
 	--color-btn-primary-bg: var(--color-primary-600);
 	--color-btn-primary-bg-active: var(--color-primary-700);
 	--color-btn-primary-text: var(--color-text-on-primary);
-	
+
 	--color-btn-secondary-bg: var(--color-grey-800);
 	--color-btn-secondary-bg-active: var(--color-grey-850);
 	/* --color-btn-secondary-text: var(--color-white); */
 	--color-btn-primary-outlined: var(--color-primary-500);
 	--color-btn-secondary-outlined: var(--color-grey-800);
-	
+
 	--color-btn-danger-bg: var(--color-red-500);
 	--color-btn-danger-bg-active: var(--color-red-700);
 	--color-btn-danger-text: var(--color-white);
@@ -626,7 +633,7 @@ abbr {
 
 	/* Shadow */
 	--container-shadow: none;
-	--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(3,3,3,0.5);
+	--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(3, 3, 3, 0.5);
 }
 
 .light {
@@ -666,7 +673,7 @@ abbr {
 	--color-text-disabled: var(--color-grey-400);
 	--color-text-primary: var(--color-primary-700);
 	--color-text-on-primary: var(--color-white);
-	
+
 	/* Border Colors */
 	--color-border-default: var(--color-grey-500);
 	/* --color-bg-surface: var(--color-grey-300); */
@@ -676,13 +683,13 @@ abbr {
 	--color-btn-primary-bg: var(--color-primary-600);
 	--color-btn-primary-bg-active: var(--color-primary-700);
 	--color-btn-primary-text: var(--color-text-on-primary);
-	
+
 	--color-btn-secondary-bg: var(--color-grey-400);
 	--color-btn-secondary-bg-active: var(--color-grey-300);
 	/* --color-btn-secondary-text: var(--color-black); */
 	--color-btn-primary-outlined: var(--color-primary-700);
 	--color-btn-secondary-outlined: var(--color-grey-400);
-	
+
 	--color-btn-danger-bg: var(--color-red-500);
 	--color-btn-danger-bg-active: var(--color-red-700);
 	--color-btn-danger-text: var(--color-white);
@@ -745,52 +752,115 @@ abbr {
 	--gradient-hero-section-text: linear-gradient(135deg, #fd8738 50%, #ff6a85);
 
 	/* Shadow */
-	--container-shadow: 0 .1rem .5rem .1rem rgba(200,200,200, 0.3);
-	--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(0,0,0,0.1);
+	--container-shadow: 0 .1rem .5rem .1rem rgba(200, 200, 200, 0.3);
+	--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.1);
 }
 
 /* ----- Music ----- */
 
 /* PlayIcon */
 @keyframes bounce1 {
-  0%, 50%, 100% { height: 1.2rem; }
-  25%, 75% { height: 0.6rem; }
+
+	0%,
+	50%,
+	100% {
+		height: 1.2rem;
+	}
+
+	25%,
+	75% {
+		height: 0.6rem;
+	}
 }
 
 @keyframes bounce2 {
-  0%, 10%, 100% { height: 1.2rem; }
-  20%, 60% { height: 0.35rem; }
-  40%, 80% { height: 0.75rem; }
+
+	0%,
+	10%,
+	100% {
+		height: 1.2rem;
+	}
+
+	20%,
+	60% {
+		height: 0.35rem;
+	}
+
+	40%,
+	80% {
+		height: 0.75rem;
+	}
 }
 
 @keyframes bounce3 {
-  0%, 33%, 66%, 100% { height: 0.33rem; }
-  11%, 77% { height: 0.66rem; }
-  44% { height: 1.2rem; }
-  22%, 55%, 88% { height: 1rem; }
+
+	0%,
+	33%,
+	66%,
+	100% {
+		height: 0.33rem;
+	}
+
+	11%,
+	77% {
+		height: 0.66rem;
+	}
+
+	44% {
+		height: 1.2rem;
+	}
+
+	22%,
+	55%,
+	88% {
+		height: 1rem;
+	}
 }
 
 .animate-bar1 {
-  animation: bounce1 1.5s infinite ease-in-out;
+	animation: bounce1 1.5s infinite ease-in-out;
 }
+
 .animate-bar2 {
-  animation: bounce2 1.6s infinite ease-in-out;
+	animation: bounce2 1.6s infinite ease-in-out;
 }
+
 .animate-bar3 {
-  animation: bounce3 1.7s infinite ease-in-out;
+	animation: bounce3 1.7s infinite ease-in-out;
 }
 
 /* Marquee */
 @keyframes marquee {
-	0% { transform: translateX(0); }
-	20% { transform: translateX(0); }
-	70% { transform: translateX(calc(-1 * var(--scroll-distance))); }
-	90% { transform: translateX(calc(-1 * var(--scroll-distance))); }
-	100% { transform: translateX(0); }
+	0% {
+		transform: translateX(0);
+	}
+
+	20% {
+		transform: translateX(0);
+	}
+
+	70% {
+		transform: translateX(calc(-1 * var(--scroll-distance)));
+	}
+
+	90% {
+		transform: translateX(calc(-1 * var(--scroll-distance)));
+	}
+
+	100% {
+		transform: translateX(0);
+	}
 }
 
 .animate-marquee {
 	display: inline-block;
 	vertical-align: top;
 	animation: marquee 12s linear infinite;
+}
+
+/* Loader */
+@keyframes progress {
+	to {
+		stroke-dashoffset: 0;
+	}
 }
