--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -64,6 +64,7 @@
 .jobads-item_img {
 	display: block;
     width: 100%;
+	height: 100%;
 	object-fit: cover;
 	aspect-ratio: 3/2;
 	border-radius: var(--border-radius);
