--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -66,7 +66,7 @@
 	display: block;
 	max-width: 100%;
 	max-height: 100%;
-	object-fit: cover;
+	object-fit: inherit;
 	aspect-ratio: 3/2;
 	border-radius: var(--border-radius);
 	border: .15rem solid var(--color-border-default);
