--- a/src/components/jobad/jobadsListItem.css
+++ b/src/components/jobad/jobadsListItem.css
@@ -65,6 +65,7 @@
 .jobads-item_img {
 	display: block;
 	max-width: 100%;
+	width: 100%;
 	max-height: 100%;
 	object-fit: inherit;
 	aspect-ratio: 3/2;
@@ -148,7 +149,6 @@
 
 	.jobads-item_img {
 		height: 4.5rem;
-		width: fit-content;
 	}
 }
 
